# descriptive-summary-statistics

./: .gitignore  README.md  decode_results.py  hub_entrypoint_10.py  pyproject.toml  requirements.txt  run_genomic_analysis.py  run_imaging_analysis.py  run_local_sim.py
data_report/: analyze.py  cli.py  config.py  label.py
data_report/comparison/: utils.py
data_report/generate_figures/: data_quality_plots.py  federated_descriptive_plots.py  inferential_plots.py  local_descriptive_plots.py  mca_plots.py  pca_plots.py  primitives.py  style.py
data_report/get_data/: generate_synthetic_data.py  inspect_special_dataset_types.py  load_data.py  (+1 more)
docs/: BUGS_REPORT.md  CHANGELOG.md  CHANGES_README.md  CLUSTERING_REMOVAL_README.md  FIXES_PLAN.md  FULL_CODE_REVIEW_2026-07.md  GENOMIC_ANALYSIS_CHANGES.md  GENOMIC_DATA_SOURCES.md  GRAPHICS_REFACTORING_PLAN.md  GRAPHICS_REFACTORING_REPORT.md  IMAGING_ANALYSIS_README.md  LOCAL_PIPELINE_README.md  REPORT_READABILITY_FIXES.md  REPORT_READABILITY_FIXES_2.md  REPORT_REFACTORING_PLAN.md  SESSION_FIXES_REPORT.md  VARIANCE_FIX.md  inferential_statistics_changes.md  session_summary.md  synthetic_dataset4_changes.md
generate_reports/: generate_global_report.py  generate_json_summary.py  generate_local_report.py  report_utils.py  section_definitions.py
sample_data/: README.md
scripts/: build_references_pdf.py  plot_variant_type_distribution.py
tests/: test_generate_json_summary.py  test_get_data_utils.py  test_hub_local_parity.py  test_inferential_analysis.py  test_mca.py  test_new_modules.py  test_pca.py  test_report_utils.py
(+26 files in other folders)
