[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_report"
version = "0.1.0"
description = "Federated Exploratory Data Analysis and Descriptive Summary Statistics for Privacy-Preserving Medical Research with FLAME"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=6.0",
    "prince>=0.13",
    "flame @ git+https://github.com/PrivateAIM/python-sdk-patterns.git@a3643a14bb52842138455174ea8cb5b27d071ba3",
]

[tool.setuptools.packages.find]
include = ["data_report*"]

[project.scripts]
dr-analyze = "data_report.cli:analyze_main"